InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/vlocity_ins__ContractProviderNetwork__c.object-meta.xml
<CustomObject>
    <description>In a service provider contract, the provider agrees to provide its services under one or more networks. This object holds that data. Master-detail child object of Contract.</description>
    <label>Contract Provider Network</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Provider Network</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>