InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/fields/vlocity_ins__ProviderAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Provider Network</relationshipLabel>
    <relationshipName>ContractProviderNetwork</relationshipName>
    <type>Lookup</type>
</CustomField>