InsuranceOrg/force-app/main/default/objects/vlocity_ins__ContractProviderNetwork__c/fields/vlocity_ins__ProviderFeeScheduleId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProviderFeeScheduleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Fee Schedule</label>
    <referenceTo>vlocity_ins__ProviderFeeSchedule__c</referenceTo>
    <relationshipLabel>Contract Provider Network</relationshipLabel>
    <relationshipName>ContractProviderNetwork</relationshipName>
    <type>Lookup</type>
</CustomField>